infrastructure/vault-extend-raft/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: i-vault
  labels:
    istio.io/rev: stable
    name: i-vault
