infrastructure/vault-extend-raft/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "strict"
  namespace: "i-vault"
spec:
  mtls:
    mode: "STRICT"
